[package]
name = "blocksmith-client"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
secp256k1 = { version = "0.31.1", features = ["rand", "hashes"] }
reqwest = { version = "0.12.24", features = ["json"] }
derive-getters = "0.5.0"
serde_json = "1.0.145"
serde = "1.0.228"
dotenv = "0.15.0"
rand = "0.9.2"
